# NestStats

./: .dockerignore  .gitignore  Dockerfile  PLAY_STORE_TWA.md  Program.cs  README.md  RENDER_DEPLOYMENT.md  app-release-signed.apk.idsig  appsettings.Local.example.json  assetlinks.json  manifest-checksum.txt  render.yaml  twa-manifest.json
Data/: ApplicationDbContext.cs  IdentitySchemaUpdater.cs
Firmwares/: Battery_regulator_UDP_node.ino  Inverter_fetch_node.ino  README.md  cheapyellowdispV1_node.ino  wattrouter_2SSR_UDP_node.ino
Firmwares/WAVESHAREV1/main/: CMakeLists.txt  idf_component.yml  neststats_logo.c  neststats_logo.h  test_esp_lcd_st7703.c
Models/: AdminBootstrapOptions.cs  ApplicationUser.cs  DashboardModels.cs  EmailOptions.cs  UserEnergySystemAssignment.cs
NestStats2/: .gitignore  NESTSTATS_TECHNICAL_DOCUMENTATION.md  NestStats2.csproj  README.md  appsettings.Development.json  appsettings.json  build-net10.ps1  run-net10.ps1
NestStats2/Data/: IdentitySeeder.cs
NestStats2/Firmwares/: wattrouter_3SSR_7segmentdisp_node.ino  wattrouter_3SSR_local_no_wifi_node.ino  wattrouter_3SSR_node.ino
NestStats2/Models/: AuthOptions.cs  SupabaseOptions.cs  (+1 more)
Pages/: Error.cshtml  Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml  _ViewImports.cshtml
Services/: AnalysisPdfExportService2.cs  AppLanguageService.cs  DashboardLoadCoordinator.cs  ISystemCredentialProtector.cs  StartupInitializationHostedService.cs  SupabaseEnergyDashboardService.cs
app/: build.gradle
store-assets/: README.txt
wwwroot/: manifest.webmanifest  service-worker.js
(+74 files in other folders)
